<resources>
    <string name="app_name">EcoRecicla</string>
    <string name="ecorecicla">EcoRecicla</string>
    <string name="todo">TODO</string>
    <string name="registrese">Regístrese</string>
    <string name="ingresar">Ingresar</string>
    <string name="o">- O -</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="celular">Celular:</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="nombre">Nombre:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="n_mero_de_celular">Número de celular</string>
    <string name="registro">Registro</string>
    <string name="bienvenido_al_team_ecorecicla_por_favor_ingresa_la_siguiente_informaci_n">Bienvenido al Team EcoRecicla, por favor ingresa la siguiente información.</string>
    <string name="correo_electr_nico">Correo electrónico:</string>
    <string name="guardar">Guardar</string>
    <string name="ingrese_el_total">Ingrese el total</string>
    <string name="todos">TODO</string>
    <string name="perfecto_ahora_ingresa_los_siguiente_datos_para_poder_indicarte_cuantos_puntos_acumulas_por_este_trabajo">¡Perfecto! Ahora ingresa los siguiente datos para poder indicarte cuantos puntos acumulas por este trabajo.</string>
    <string name="seleccione_el_tipo_de_medici_n">Seleccione el tipo de medición:</string>
    <string name="papel">Papel</string>
    <string name="guardar1">Guardar</string>
    <string name="ingrese_el_total1">Ingrese el total</string>
    <string name="todo1">TODO</string>
    <string name="perfecto_ahora_ingresa_los_siguiente_datos_para_poder_indicarte_cuantos_puntos_acumulas_por_este_trabajo1">¡Perfecto! Ahora ingresa los siguiente datos para poder indicarte cuantos puntos acumulas por este trabajo.</string>
    <string name="cantidad">Cantidad:</string>
    <string name="pl_stico">Plástico</string>
    <string name="guardar2">Guardar</string>
    <string name="ingrese_el_total2">Ingrese el total</string>
    <string name="todo2">TODO</string>
    <string name="perfecto_ahora_ingresa_los_siguiente_datos_para_poder_indicarte_cuantos_puntos_acumulas_por_este_trabajo2">¡Perfecto! Ahora ingresa los siguiente datos para poder indicarte cuantos puntos acumulas por este trabajo.</string>
    <string name="cantidad2">Cantidad:</string>
    <string name="l_quidos">Líquidos</string>
    <string name="guardar3">Guardar</string>
    <string name="ingresa_el_total_en_ml">Ingresa el total en ml</string>
    <string name="todo3">TODO</string>
    <string name="perfecto_ahora_ingresa_los_siguiente_datos_para_poder_indicarte_cuantos_puntos_acumulas_por_este_trabajo3">¡Perfecto! Ahora ingresa los siguiente datos para poder indicarte cuantos puntos acumulas por este trabajo.</string>
    <string name="cantidad3">Cantidad:</string>
    <string name="desechos_t_xicos">Desechos Tóxicos</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="reporte_a_nivel_nacional">Reporte a nivel nacional</string>
    <string name="reportes_por_material">Reportes por material</string>
    <string name="su_reporte_generado">Su reporte generado</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="_400_puntos">400 puntos</string>
    <string name="_300_puntos">300 puntos</string>
    <string name="_100_puntos">100 puntos</string>
    <string name="todo8">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo111">TODO</string>
    <string name="puntos_obtenidos_por_plasticos">Puntos obtenidos por plasticos:</string>
    <string name="puntos_obtenidos_por_papel">Puntos obtenidos por papel:</string>
    <string name="puntos_obtenidos_por_desechos_t_xicos">Puntos obtenidos por desechos tóxicos:</string>
    <string name="puntos_obtenidos_por_l_quidos">Puntos obtenidos por líquidos:</string>
    <string name="m_s_informaci_n">Más información</string>
    <string name="todo1111">TODO</string>
    <string name="ecorecicla1">EcoRecicla</string>
    <string name="felicidades_acaba_de_ganar_100_puntos">¡Felicidades! Acaba de ganar 100 Puntos</string>
    <string name="todo22">TODO</string>
    <string name="tod">TODO</string>
    <string name="to">TODO</string>
    <string name="todo34">TODO</string>
    <string name="todo44">TODO</string>
    <string name="categorias">Categorias</string>
    <string name="consejos">Consejos</string>
    <string name="estad_sticas2">Estadísticas</string>
    <string name="m_s_informaci_n1">Más información</string>
    <string name="seleccione_la_actividad_que_desea_realizar">Seleccione la actividad que desea realizar</string>
    <string name="inicio">Inicio</string>
    <string name="qu_es_recicable_residuos_secos_siempre_limpios_y_secos">¿Qué es recicable? Residuos secos (siempre limpios y secos)</string>
    <string name="todo21">TODO</string>
    <string name="tod12">TODO</string>
    <string name="consejos1">Consejos</string>
    <string name="registrar">Registrar</string>
    <string name="_6_d_gitos_n_mericos">6 Dígitos númericos</string>
    <string name="direcci_n_de_correo_electr_nico">Dirección de correo electrónico</string>
    <string name="todoss">TODO</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="tod3">TODO</string>
    <string name="tod4">TODO</string>
    <string name="tod5">TODO</string>
    <string name="tod6">TODO</string>
    <string name="todoo">TODO</string>
    <string name="desechos_t_xicos2">Desechos tóxicos</string>
    <string name="l_quidos1">Líquidos</string>
    <string name="papel1">Papel</string>
    <string name="pl_stico1">Plástico</string>
    <string name="en_esta_secci_n_podr_s_seleccionar_el_tipo_de_material_que_vas_a_desechar_para_poder_indicarte_el_avance_alcanzado">En esta sección podrás seleccionar el tipo de material que vas a desechar para poder indicarte el avance alcanzado.</string>
    <string name="clasificaci_n">Clasificación</string>
</resources>