<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#27A56C38"
    tools:context=".activity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/pngwing_com"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textTitulo"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="100dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/ecorecicla"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editUsuario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/usuario"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editContraseña"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/contrasena"
                android:textColorHint="#5D4037"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/olvidaste_tu_contrasena" />

            <Button
                android:id="@+id/buttonIngresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D38C6745"
                android:text="@string/ingresar" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/o" />

            <Button
                android:id="@+id/buttonRegistroNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D38C6745"
                android:text="@string/registrese" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>