<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#27A56C38"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/pngwing_com"
                android:contentDescription="@string/todo21" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/consejos1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/qu_es_recicable_residuos_secos_siempre_limpios_y_secos"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textConsejosVr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Lista de consejos"
                tools:ignore="VisualLintLongText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="304dp"
                android:layout_height="305dp"
                android:src="@drawable/fomentar_le_reciclaje_en_las_escuelas"
                android:contentDescription="@string/tod12" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/buttonRegreso"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#D38C6745"
                app:icon="?attr/actionModeCloseDrawable"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>